--- a/行李清單.html
+++ b/行李清單.html
@@ -15,16 +15,14 @@
             background-image: url('/img/IMG_20210417_154803.jpg');
             background-repeat: no-repeat;
             background-attachment: fixed;
-            background-size: cover;
+            background-size: 100% 100%;
         }
 
-        .row {
-            margin-top: 50px;
-        }
     </style>
 </head>
 
 <body>
+    <!-- 導覽列 -->
     <nav class="navbar navbar-expand-lg sticky-top" style="background-color: rgba(255, 255, 255, 0.5);">
         <div class="container-fluid">
             <a class="navbar-brand nav-link ms-3" href="/小專題.html"><i class="bi bi-house"></i> Home</a>
@@ -35,6 +33,7 @@
             </button>
         </div>
     </nav>
+    <!-- 清單 -->    
     <div class="row row-cols-1 row-cols-md-3 m-3 g-4">
         <div class="col">
             <fieldset class="form-control border-success"
