新增飲食區塊

--- a/小專題.html
+++ b/小專題.html
@@ -385,6 +385,32 @@
                             </div>
                         </fieldset>
                     </div>
+                    <!-- 飲食 -->
+                    <fieldset class="form-control border-muted">
+                        <legend>飲食</legend>
+                        <div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#menu">請給我菜單。</button>
+                            <div id="menu" class="collapse">メニューをください / Menyuu o kudasai</div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#food">這道菜有什麼？</button>
+                            <div id="food" class="collapse">この料理は何が入っていますか / Kono ryouri wa nani ga haitteimasu ka</div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#recommend">請給我推薦一下。</button>
+                            <div id="recommend" class="collapse">おすすめをお願いします / Osusume o onegai shimasu</div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#vegetarian">我是素食者。</button>
+                            <div id="vegetarian" class="collapse">私はベジタリアンです / Watashi wa bejitarian desu.</div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#order">可以點餐嗎？</button>
+                            <div id="order" class="collapse">注文してもいいですか / Chuumon shite mo ii desu ka</div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#noseafood">我不吃海鮮。</button>
+                            <div id="noseafood" class="collapse">私は海鮮を食べません / Watashi wa kaisen o tabemasen</div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#waterpls">請給我一杯水。</button>
+                            <div id="waterpls" class="collapse">水をください / Mizu o kudasai</div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#delicious">這道菜很好吃！</button>
+                            <div id="delicious" class="collapse">この料理はおいしいです / Kono ryouri wa oishii desu</div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#checkout">請幫我結帳。 </button>
+                            <div id="checkout" class="collapse">お会計お願いします / Okaikei onegaishimasu</div>
+                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#thankservice">謝謝款待</button>
+                            <div id="thankservice" class="collapse">ごちそうさまでした / Gochisousama deshita</div>
+                        </div>
+                    </fieldset>
                 </div>
             </div>
         </div>
