--- a/小專題.html
+++ b/小專題.html
@@ -23,6 +23,9 @@
             object-fit: cover;
         }
 
+        .btn {
+            margin: 5px;
+        }
     </style>
 
 </head>
@@ -190,20 +193,31 @@
                 </div>
                 <!-- 旅遊日行程 -->
                 <div class="tab-pane fade" id="nav-day" role="tabpanel" aria-labelledby="nav-day-tab" tabindex="0">
-                    <!-- <nav>
-                        <div class="mt-3">
-                            <button type="button" class="btn btn-outline-primary active" id="nav-day1-tab" data-bs-toggle="tab" 
-                                data-bs-target="#nav-day1">Day 1</button>
-                            <button type="button" class="btn btn-outline-secondary" id="nav-day2-tab" data-bs-toggle="tab"
-                                data-bs-target="#nav-day2">Day 2</button>
-                            <button type="button" class="btn btn-outline-success" id="nav-day3-tab" data-bs-toggle="tab"
-                                data-bs-target="#nav-day3">Day 3</button>
-                            <button type="button" class="btn btn-outline-danger" id="nav-day4-tab" data-bs-toggle="tab"
-                                data-bs-target="#nav-day4">Day 4</button>
-                            <button type="button" class="btn btn-outline-info" id="nav-day5-tab" data-bs-toggle="tab"
-                                data-bs-target="#nav-day5" >Day 5</button>
-                        </div>
-                    </nav> -->
+                    <div class="m-3">
+                        <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#Day1" aria-expanded="false" aria-controls="Day1">
+                            Day 1
+                        </button>
+                        <button class="btn btn-outline-success" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#Day2" aria-expanded="false" aria-controls="Day2">
+                            Day 2
+                        </button>
+                        <button class="btn btn-outline-info" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#Day3" aria-expanded="false" aria-controls="Day3">
+                            Day 3
+                        </button>
+                        <button class="btn btn-outline-warning" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#Day4" aria-expanded="false" aria-controls="Day4">
+                            Day 4
+                        </button>
+                        <button class="btn btn-outline-danger" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#Day5" aria-expanded="false" aria-controls="Day5">
+                            Day 5
+                        </button>
+                    </div>
+                    <div>
+
+                    </div>
                 </div>
                 <!-- 住宿資訊 -->
                 <div class="tab-pane fade " id="nav-live" role="tabpanel" aria-labelledby="nav-live-tab" tabindex="0">
@@ -336,27 +350,37 @@
                 <div class="tab-pane fade row row-md-3 m-3 g-4" id="nav-session" role="tabpanel"
                     aria-labelledby="nav-session-tab" tabindex="0">
                     <!-- 禮儀區塊 -->
-                    <div>  
+                    <div>
                         <fieldset class="form-control border-muted">
                             <legend>禮儀</legend>
                             <div>
-                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#Hello">你好</button>
+                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#Hello">你好</button>
+                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#goodmorning">早安</button>
+                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#goodevening">晚安</button>
+                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#goodbye">再見</button>
+                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#thankyou">謝謝</button>
+                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#sorry">不好意思 / 對不起</button>
+                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#noproblem">沒關係</button>
+                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#toilet">請問廁所在哪裡?</button>
+                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse"
+                                    data-bs-target="#plstakecare">請多關照</button>
+                                <hr>
                                 <div id="Hello" class="collapse">こんにちは / Konnichiwa</div>
-                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#goodmorning">早安</button>
                                 <div id="goodmorning" class="collapse">おはようございます / Ohayou gozaimasu</div>
-                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#goodevening">晚安</button>
                                 <div id="goodevening" class="collapse">こんばんは / Konbanwa</div>
-                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#goodbye">再見</button>
                                 <div id="goodbye" class="collapse">さようなら / Sayounara</div>
-                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#thankyou">謝謝</button>
                                 <div id="thankyou" class="collapse">ありがとうございます / Arigatou gozaimasu</div>
-                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#sorry">不好意思 / 對不起</button>
                                 <div id="sorry" class="collapse">すみません / Sumimasen</div>
-                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#noproblem">沒關係</button>
                                 <div id="noproblem" class="collapse">大丈夫です / Daijoubu desu</div>
-                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#toilet">請問廁所在哪裡?</button>
                                 <div id="toilet" class="collapse">トイレはどこですか / Toire wa doko desu ka</div>
-                                <button type="button" class="btn btn-outline-primary" data-bs-toggle="collapse" data-bs-target="#plstakecare">請多關照</button>
                                 <div id="plstakecare" class="collapse">よろしくお願いします / Yoroshiku onegai shimasu</div>
                             </div>
                         </fieldset>
@@ -366,51 +390,76 @@
                         <fieldset class="form-control border-muted">
                             <legend>購物</legend>
                             <div>
-                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse" data-bs-target="#howmuch">這個多少錢？</button>
+                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse"
+                                    data-bs-target="#howmuch">這個多少錢？</button>
+                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse"
+                                    data-bs-target="#look">我可以看看嗎？</button>
+                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse"
+                                    data-bs-target="#haveproduce">有這個嗎？</button>
+                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse"
+                                    data-bs-target="#whatisthis">這是什麼？</button>
+                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse"
+                                    data-bs-target="#wantthis">我想要這個。</button>
+                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse"
+                                    data-bs-target="#creditcard">可以刷卡嗎？</button>
+                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse"
+                                    data-bs-target="#othercolor">有其他顏色嗎？</button>
+                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse"
+                                    data-bs-target="#taxfree">請問可以免稅嗎？</button>
+                                <hr>
                                 <div id="howmuch" class="collapse">これはいくらですか？ / Kore wa ikura desu ka</div>
-                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse" data-bs-target="#look">我可以看看嗎？</button>
                                 <div id="look" class="collapse">見てもいいですか / Mite mo ii desu ka</div>
-                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse" data-bs-target="#haveproduce">有這個嗎？</button>
                                 <div id="haveproduce" class="collapse">これがありますか / Kore ga arimasu ka</div>
-                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse" data-bs-target="#whatisthis">這是什麼？</button>
                                 <div id="whatisthis" class="collapse">これは何ですか / Kore wa nan desu ka</div>
-                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse" data-bs-target="#wantthis">我想要這個。</button>
                                 <div id="wantthis" class="collapse">これをください / Kore o kudasai</div>
-                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse" data-bs-target="#creditcard">可以刷卡嗎？</button>
-                                <div id="creditcard" class="collapse">クレジットカードは使えますか / Kurejitto kaado wa tsukaemasu ka</div>
-                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse" data-bs-target="#othercolor">有其他顏色嗎？</button>
+                                <div id="creditcard" class="collapse">クレジットカードは使えますか / Kurejitto kaado wa tsukaemasu ka
+                                </div>
                                 <div id="othercolor" class="collapse">他の色がありますか / Hokano iro ga arimasu ka</div>
-                                <button type="button" class="btn btn-outline-danger" data-bs-toggle="collapse" data-bs-target="#taxfree">請問可以免稅嗎？</button>
                                 <div id="taxfree" class="collapse">免稅、できますか / menze dekimaska</div>
                             </div>
                         </fieldset>
                     </div>
                     <!-- 飲食 -->
-                    <fieldset class="form-control border-muted">
-                        <legend>飲食</legend>
-                        <div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#menu">請給我菜單。</button>
-                            <div id="menu" class="collapse">メニューをください / Menyuu o kudasai</div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#food">這道菜有什麼？</button>
-                            <div id="food" class="collapse">この料理は何が入っていますか / Kono ryouri wa nani ga haitteimasu ka</div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#recommend">請給我推薦一下。</button>
-                            <div id="recommend" class="collapse">おすすめをお願いします / Osusume o onegai shimasu</div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#vegetarian">我是素食者。</button>
-                            <div id="vegetarian" class="collapse">私はベジタリアンです / Watashi wa bejitarian desu.</div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#order">可以點餐嗎？</button>
-                            <div id="order" class="collapse">注文してもいいですか / Chuumon shite mo ii desu ka</div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#noseafood">我不吃海鮮。</button>
-                            <div id="noseafood" class="collapse">私は海鮮を食べません / Watashi wa kaisen o tabemasen</div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#waterpls">請給我一杯水。</button>
-                            <div id="waterpls" class="collapse">水をください / Mizu o kudasai</div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#delicious">這道菜很好吃！</button>
-                            <div id="delicious" class="collapse">この料理はおいしいです / Kono ryouri wa oishii desu</div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#checkout">請幫我結帳。 </button>
-                            <div id="checkout" class="collapse">お会計お願いします / Okaikei onegaishimasu</div>
-                            <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse" data-bs-target="#thankservice">謝謝款待</button>
-                            <div id="thankservice" class="collapse">ごちそうさまでした / Gochisousama deshita</div>
-                        </div>
-                    </fieldset>
+                    <div>
+                        <fieldset class="form-control border-muted">
+                            <legend>飲食</legend>
+                            <div>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#menu">請給我菜單。</button>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#food">這道菜有什麼？</button>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#recommend">請給我推薦一下。</button>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#vegetarian">我是素食者。</button>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#order">可以點餐嗎？</button>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#noseafood">我不吃海鮮。</button>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#waterpls">請給我一杯水。</button>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#delicious">這道菜很好吃！</button>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#checkout">請幫我結帳。 </button>
+                                <button type="button" class="btn btn-outline-success" data-bs-toggle="collapse"
+                                    data-bs-target="#thankservice">謝謝款待</button>
+                                <hr>
+                                <div id="menu" class="collapse">メニューをください / Menyuu o kudasai</div>
+                                <div id="food" class="collapse">この料理は何が入っていますか / Kono ryouri wa nani ga haitteimasu ka
+                                </div>
+                                <div id="recommend" class="collapse">おすすめをお願いします / Osusume o onegai shimasu</div>
+                                <div id="vegetarian" class="collapse">私はベジタリアンです / Watashi wa bejitarian desu.</div>
+                                <div id="order" class="collapse">注文してもいいですか / Chuumon shite mo ii desu ka</div>
+                                <div id="noseafood" class="collapse">私は海鮮を食べません / Watashi wa kaisen o tabemasen</div>
+                                <div id="waterpls" class="collapse">水をください / Mizu o kudasai</div>
+                                <div id="delicious" class="collapse">この料理はおいしいです / Kono ryouri wa oishii desu</div>
+                                <div id="checkout" class="collapse">お会計お願いします / Okaikei onegaishimasu</div>
+                                <div id="thankservice" class="collapse">ごちそうさまでした / Gochisousama deshita</div>
+                            </div>
+                        </fieldset>
+                    </div>
+                    <br>
                 </div>
             </div>
         </div>
