背景圖更動

--- a/行李清單.html
+++ b/行李清單.html
@@ -12,7 +12,7 @@
 
     <style>
         body {
-            background-image: url('/img/IMG_20210417_154803.jpg');
+            background-image: url('./img/澎湖\ 天堂路.jpg');
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: 100% 100%;
