--- a/小專題.html
+++ b/小專題.html
@@ -77,13 +77,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/img/P_20231126_144627.jpg" class="img-fluid " alt="">
+                    <img src="./img/清水寺 夜楓.jpg" class="img-fluid " alt="">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/P_20231127_173539.jpg" class="img-fluid" alt="">
+                    <img src="./img/金閣寺.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="carousel-item">
-                    <img src="/img/P_20231128_115141.jpg" class="img-fluid" alt="">
+                    <img src="./img/二条城 庭院.jpg" class="img-fluid" alt="">
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
