--- a/行李清單.html
+++ b/行李清單.html
@@ -31,6 +31,13 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/常用會話.html">常用會話</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!-- 清單 -->    
