--- a/行李清單.html
+++ b/行李清單.html
@@ -18,6 +18,11 @@
             background-size: 100% 100%;
         }
 
+        @media (min-width: 1200px) {
+            body {
+                background-image: url("./img/二条城\ 庭院.jpg");
+            }
+        }
     </style>
 </head>
 
@@ -40,71 +45,72 @@
             </div>
         </div>
     </nav>
-    <!-- 清單 -->    
+    <!-- 一鍵清除 -->
+    <div class="container mt-3">
+        <button class="btn btn-outline-danger " id="clear-button">一鍵清除</button>
+    </div>
+
+    <!-- 清單 -->
     <div class="row row-cols-1 row-cols-md-3 m-3 g-4">
         <div class="col">
             <fieldset class="form-control border-success"
                 style="font-size:larger; background-color: rgba(255, 255, 255, 0.9);">
                 <legend><i class="bi bi-luggage me-3"></i>旅行相關</legend>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">護照</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">簽證</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">兩吋照片</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
-                    <label class="form-check-label" for="checkDefault">機票證明</label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">行李束帶</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">旅行袋</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">頸枕</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">鎖頭</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">行李秤</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">耳塞
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">眼罩</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">行程 / 飯店確證單節圖</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">國際駕照</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">外幣</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault1">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">網卡</label>
                 </div>
             </fieldset>
@@ -114,47 +120,47 @@
                 style="font-size: larger; background-color: rgba(255, 255, 255, 0.9);">
                 <legend><i class="bi bi-handbag me-3"></i>基本物品</legend>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">隨身包</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">信用卡</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">充電線</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">行動電源</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">萬用插座</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">眼鏡 / 隱形眼鏡</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">化妝品 / 保養品</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">防曬</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">雨傘</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">水壺</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault2">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">藥品</label>
                 </div>
             </fieldset>
@@ -164,57 +170,110 @@
                 style="font-size: larger; background-color: rgba(255, 255, 255, 0.9);">
                 <legend><i class="bi bi-person me-3"></i>衣物與盥洗用品</legend>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">上衣</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">褲子 / 裙</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">布鞋 / 拖鞋</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">外套</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">襪子</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">飾品</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">牙膏 / 牙刷</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">洗面乳</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">洗 / 潤髮乳</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">沐浴乳</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">毛巾</label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="checkDefault3">
+                    <input class="form-check-input list-item" type="checkbox">
                     <label class="form-check-label" for="checkDefault">梳子</label>
                 </div>
             </fieldset>
         </div>
     </div>
 
+    <!-- localStorage-->
+    <script>
+        // 取得所有具有 'list-item' class 的核取方塊
+        const listItems = document.querySelectorAll('.list-item');
+
+        // 取得清除按鈕
+        const clearButton = document.getElementById('clear-button');
+
+        // 定義儲存在 localStorage 的鍵名
+        const storageKey = 'packingListStatus';
+
+        // 函式：將所有清單項目的狀態儲存到 localStorage
+        function saveListStatus() {
+            const status = {};
+            listItems.forEach((item, index) => {
+                status[index] = item.checked;
+            });
+            localStorage.setItem(storageKey, JSON.stringify(status));
+        }
+
+        // 函式：從 localStorage 讀取並恢復清單狀態
+        function loadListStatus() {
+            const savedStatus = localStorage.getItem(storageKey);
+            if (savedStatus) {
+                const status = JSON.parse(savedStatus);
+                listItems.forEach((item, index) => {
+                    if (status[index] !== undefined) {
+                        item.checked = status[index];
+                    }
+                });
+            }
+        }
+
+        // 函式：清除所有選項並同步清除 localStorage
+        function clearAllItems() {
+            listItems.forEach(item => {
+                item.checked = false; // 將所有核取方塊的勾選狀態設為 false
+            });
+            localStorage.removeItem(storageKey); // 移除 localStorage 中儲存的資料
+            console.log("已清除所有勾選項目並移除 localStorage 記錄。");
+        }
+
+        // 網頁載入時，立即載入 localStorage 的狀態
+        window.addEventListener('load', loadListStatus);
+
+        // 為每個核取方塊添加 change 事件監聽器
+        listItems.forEach(item => {
+            item.addEventListener('change', saveListStatus);
+        });
+
+        // 為「一鍵清除」按鈕添加點擊事件監聽器
+        clearButton.addEventListener('click', clearAllItems);
+    </script>
 </body>
 
 </html>
