--- a/小專題.html
+++ b/小專題.html
@@ -29,10 +29,8 @@
 
         /* 統一卡片圖片大小 */
         .card-img {
-            height: 600px;
+            height: 100%;
             /* 這裡設定你想要的高度，例如 200px */
-            object-fit: cover;
-            /* 讓圖片填滿容器，並裁剪多餘的部分 */
             width: 100%;
             /* 確保圖片寬度與卡片寬度相同 */
         }
@@ -57,7 +55,7 @@
     <!-- 導覽列 -->
     <nav class="navbar navbar-expand-lg sticky-top" style="background-color: rgba(255, 255, 255, 0.5);">
         <div class="container-fluid">
-            <a class="navbar-brand">導覽列</a>
+            <a class="navbar-brand"><i class="bi bi-bookmarks-fill"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -66,7 +64,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Top</a>
                     </li>
 
                     <li class="nav-item">
@@ -103,7 +101,11 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./img/清水寺 夜楓.jpg" class="img-fluid " alt="">
+                    <img src="./img/清水寺 夜楓.jpg" class="img-fluid " alt="清水寺">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>清水寺 夜楓</h5>
+                        <p>楓夜季,夜間特別開放</p>
+                    </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/金閣寺.jpg" class="img-fluid" alt="">
@@ -129,7 +131,7 @@
         <div class="col-md-10">
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand">頁籤</a>
+                    <a class="navbar-brand"><i class="bi bi-bookmarks"></i></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav-tab"
                         aria-controls="nav-tab" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -217,9 +219,9 @@
                 <!-- 旅行景點 -->
                 <div class="tab-pane fade" id="nav-attractions" role="tabpanel" aria-labelledby="nav-attractions-tab"
                     tabindex="0">
-                    <div class="row mt-3 g-1">
+                    <div class="row mt-3 g-1 d-flex" style="flex: content;">
                         <div class="card text-bg-dark">
-                            <img src="./img/保津川遊船.jpg" class="card-img" alt="保津川遊船">
+                            <img src="./img/保津川遊船2.jpg" class="card-img" alt="保津川遊船">
                             <div class="card-img-overlay">
                                 <h5 class="card-title">保津川遊船</h5>
                                 <p class="card-text">穿越西京都野外山丘的遊船之旅</p>
